<resources>
    <string name="app_name">FreePortableSound</string>
    <string name="default_name">Default Name</string>
    <string name="default_username">Default Username</string>
    <string name="default_tag">DefaultTag</string>
    <string name="number_of_ratings">Number of Ratings</string>
    <string name="download">Download HQ</string>
    <string name="average_rating">Average Rating</string>
    <string name="sound_name">Sound Name</string>
    <string name="tags">Tags</string>
    <string name="description">Description</string>
    <string name="date_of_creation">Date of Creation</string>
    <string name="license">License</string>
    <string name="type">Type</string>
    <string name="file_size">File Size</string>
    <string name="duration">Duration</string>
    <string name="sample_rate">Sample Rate</string>
    <string name="username">Username</string>
    <string name="number_of_downloads">Number of Downloads</string>
    <string name="content_description">TODO</string>
    <string name="share">Share</string>
</resources>