<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.MainPageActivity"
    android:background="@color/background">

    <!-- Scrollable body -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Header with image loaded from API -->
            <ImageView
                android:id="@+id/imageHeader"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                android:contentDescription="@string/content_description" />

            <!-- Information about the sound -->
            <TextView
                android:layout_marginTop="10dp"
                android:id="@+id/textSoundName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="34sp"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:text="@string/sound_name"/>

            <TextView
                android:id="@+id/textTags"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="28sp"
                android:textStyle="italic"
                android:textColor="@android:color/white"
                android:text="@string/tags"/>

            <TextView
                android:layout_marginTop="20dp"
                android:id="@+id/textDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:textColor="@color/white"
                android:text="@string/description"/>

            <TextView
                android:id="@+id/textDateOfCreation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:textStyle="italic"
                android:text="@string/date_of_creation"/>

            <TextView
                android:id="@+id/textUsername"

                android:textSize="20sp"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"/>

            <TextView
                android:id="@+id/textType"
                android:layout_marginTop="30dp"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type"/>

            <TextView
                android:id="@+id/textFileSize"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/file_size"/>

            <TextView
                android:id="@+id/textDuration"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/duration"/>

            <TextView
                android:id="@+id/textSampleRate"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sample_rate"/>

            <TextView
                android:id="@+id/textNumDownloads"
                android:layout_marginTop="30dp"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_of_downloads"/>

            <TextView
                android:id="@+id/textAvgRating"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/average_rating"/>

            <TextView
                android:id="@+id/textNumRatings"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_of_ratings"/>

            <!-- Play/Pause button (circular) -->
            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:gravity="start">

                <!-- Play/Pause button (circular) -->
                <FrameLayout
                    android:id="@+id/btnPlayContainer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="?android:selectableItemBackground">

                    <ImageButton
                        android:id="@+id/btnPlay"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_gravity="center"
                        android:contentDescription="@string/content_description"
                        android:background="@drawable/rounded_red_button_background"
                        android:src="@drawable/ic_play_button" />
                </FrameLayout>
            </LinearLayout>

            <!-- Download and Share buttons -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:gravity="center">

                <!-- Download button -->
                <Button
                    android:id="@+id/btnDownload"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/download"
                    android:backgroundTint="@color/white"
                    android:textStyle="bold"
                    android:textColor="@color/background"
                    />

                <!-- Share button -->
                <Button
                    android:id="@+id/btnShare"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:layout_marginLeft="10dp"
                    android:text="@string/share"
                    android:backgroundTint="@color/white"
                    android:textStyle="bold"
                    android:textColor="@color/background"/>
            </LinearLayout>

            <TextView
                android:id="@+id/textLicense"
                android:textSize="12sp"
                android:textStyle="italic"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/license"/>
        </LinearLayout>
    </ScrollView>

    <!-- ProgressBar for loading indicator -->
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

</RelativeLayout>
